# TSPL-netdriver

./: .gitignore  API.md  MANIFEST.in  README.md  __main__.py  config.example.json  install.sh  main.py  pyproject.toml  requirements.txt  start  uninstall.sh
api/: __init__.py  app.py  schemas.py
app_logging/: __init__.py  runtime_log.py
config/: __init__.py  config_store.py  models.py  state.py  udev_refresh.py  udev_rules.py
printer/: __init__.py  base.py  builder.py  print_service.py  renderer.py  tspl_printer.py
static/: api.js  app.css  app.js  index.html  print-page.js  print.html  toast.js
systemd/: tspl-netdriver.service
tspl_driver/: __init__.py  __main__.py  api_schemas.py  config.example.json  config_store.py  main.py  models.py  print_usb.py  state.py  template_render.py  usb_bulk.py  usb_discover.py  usb_topology.py
tspl_driver/static/: app.css  app.js  index.html
tspl_driver/tspl/: __init__.py  builder.py
usb_access/: __init__.py  bulk.py  discover.py  subsystem.py
